Uploaded image for project: 'Apache Avro'
  1. Apache Avro
  2. AVRO-1082

avro-c: avoid leaking open FILE objects

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 1.6.3, 1.7.0
    • 1.7.0
    • c
    • None

    Description

      There is a couple of functions where an open FILE object leaks:

      • file_writer_init_fp (datafile.c)
      • avro_schema_to_specific (schema_specific.c)

      Attachments

        1. AVRO-1082.patch
          0.7 kB
          Pugachev Maxim

        Activity

          People

            Unassigned Unassigned
            mpugachev Pugachev Maxim
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: