AVRO-1082. C: Avoid leaking open FILE objects

Contributed by Pugachev Maxim.


git-svn-id: https://svn.apache.org/repos/asf/avro/trunk@1340714 13f79535-47bb-0310-9956-ffa450edef68